--- a/DMZ/VOIP/config/sip.conf
+++ b/DMZ/VOIP/config/sip.conf
@@ -1,12 +1,16 @@
 [general]
 language=fr
 context=public
+allowguest=yes
 transport=udp
+tcpenable=yes
+tcpbindaddr=0.0.0.0 
 bindport=5060
-bindaddr=0.0.0.0
+udpbindaddr=0.0.0.0
 srvlookup=yes
 nat=force_rport
 localnet=192.168.1.0/255.255.255.0
 externip=188.166.60.206
 qualify=yes
 nat = yes
+allowexternaldomaine= yes
