--- a/DMZ/VOIP/Dockerfile
+++ b/DMZ/VOIP/Dockerfile
@@ -15,6 +15,7 @@ COPY config/sip.conf /etc/asterisk/sip.conf
 COPY config/extensions.conf /etc/asterisk/extensions.conf
 COPY config/voicemail.conf /etc/asterisk/voicemail.conf
 COPY config/users.conf /etc/asterisk/users.conf
+COPY config/features.conf /etc/asterisk/features.conf
 #Run asterisk
 ENTRYPOINT [ "/usr/sbin/asterisk", "-f" ]
 #CMD ["asterisk", "-f"]
