--- a/Trusted Zone/ServicesInternes/samba/smb.conf
+++ b/Trusted Zone/ServicesInternes/samba/smb.conf
@@ -258,3 +258,14 @@
     force create mode = 0660
     force directory mode = 2770
     browseable = yes
+
+[compta]
+    path = /export/compta
+    readonly = no
+    force user = nobody
+    force group = nogroup
+    force create mode = 0660
+    force directory mode = 2770
+    browseable = yes
+    read list = compta direction
+    write list = compta
