--- a/Trusted Zone/ServicesInternes/soa_interne/named.conf
+++ b/Trusted Zone/ServicesInternes/soa_interne/named.conf
@@ -4,6 +4,8 @@ options {
         listen-on { any; };
         listen-on-v6 { any; };
 
+	dnssec-validation auto;
+
         allow-query {
         192.168.0.0/24; // LocalNetwork
         198.168.1.0/24; // SecrétaireNetwork
