[Sécu Interne] redirect http to httpswq

--- a/Trusted Zone/ServicesInternes/intranet/intranet.conf
+++ b/Trusted Zone/ServicesInternes/intranet/intranet.conf
@@ -1,4 +1,8 @@
 <VirtualHost *:80>
+	Redirect permanent / https://intranet.woodytoys
+</VirtualHost>
+
+<VirtualHost *:443>
 
         ServerAdmin root.l2-2.ephec-ti.be.
         ServerName intranet.woodytoys
@@ -17,4 +21,7 @@
 
                </RequireAny>
         </Directory>
+	SSLEngine on
+	SSLCertificateFile /etc/ssl/certs/intranet.crt
+	SSLCertificateKeyFile /etc/ssl/private/intranet.key
 </VirtualHost>
