[Sécu Interns] Add ssl to ERP

--- a/Trusted Zone/ServicesInternes/intranet/Dockerfile
+++ b/Trusted Zone/ServicesInternes/intranet/Dockerfile
@@ -3,12 +3,15 @@ FROM php:8.0-apache
 
 # Installation des outils nécessaire
 RUN apt-get update -y
-RUN apt-get install iputils-ping dnsutils lynx net-tools nano -y
+RUN apt-get install iputils-ping dnsutils lynx net-tools vim openssl -y
 RUN docker-php-ext-install mysqli pdo pdo_mysql
 
 # Copie des fichier de config
 COPY index.php /var/www/html/index.php
 COPY intranet.conf /etc/apache2/sites-available/intranet.conf
+
+RUN a2enmod ssl
+RUN openssl req -new -x509 -days 365 -nodes -out /etc/ssl/certs/intranet.crt -keyout /etc/ssl/private/intranet.key
 
 # activer server apache
 RUN a2dissite 000-default.conf
